Pull request #57: Folders
Merge in TO2024/mi-pt-1500-jelenie from Folders to Milestone_3

Squashed commit of the following:

commit 1f6a798e40fbc06d6f0071440984ed1a05e3358c
Merge: 1295aa2 2288de1
Author: Szymon Janik <szymonjanik2003@gmail.com>
Date:   Fri Jan 17 04:18:07 2025 +0100

    Merge branch 'Milestone_3' of https://bitbucket.lab.ii.agh.edu.pl/scm/to2024/mi-pt-1500-jelenie into Folders

commit 1295aa2662f14aa467e69037ec0c2b5ce4cf913a
Author: Szymon Janik <szymonjanik2003@gmail.com>
Date:   Fri Jan 17 04:10:56 2025 +0100

    Changes to image upload (problems alive)

commit 005f6354fbe2c66aa0183efc9d2d8ae1e2026612
Author: Szymon Janik <szymonjanik2003@gmail.com>
Date:   Fri Jan 17 02:36:34 2025 +0100

    Images filtering by folder

commit 323dc39e928c76f34e08400dace95bc8bb62d03d
Author: Szymon Janik <szymonjanik2003@gmail.com>
Date:   Fri Jan 17 02:35:53 2025 +0100

    Folders structure in database

commit da64096c65f00553f62f729536a984b843887841
Merge: 64b40db d2023e5
Author: Szymon Janik <szymonjanik2003@gmail.com>
Date:   Thu Jan 16 23:10:40 2025 +0100

    Merge branch 'Enable-zip-upload' into Folders

commit 64b40db537c65471911b6c0d0e1774259fab2549
Author: Szymon Janik <szymonjanik2003@gmail.com>
Date:   Thu Jan 16 23:05:48 2025 +0100

    Folders initialization

commit d2023e57cbc4cdcea5c418e2684398c3fbcfcc5a
Author: Lukasz <lukasz.9@o2.pl>
Date:   Thu Jan 16 22:47:41 2025 +0100

    Init commit add zip upload